basic JS functions written, fixed type in register handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
             <input type="text" id="password-input-login"/>
         </div>
         <button type="submit" id="login-btn" class="btn">Login</button>
-        <a type="button" href="/signup">Register</a>
+        <a type="button" href="/register">Register</a>
     </form>
 </div>
 
